--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro",
-    "deploy":"gh-pages -d dist"
+    "astro": "astro"
   },
   "dependencies": {
     "@astrojs/tailwind": "^5.1.2",
